# JARVIS2

./: .env.example  .gitignore  ARCHITECTURE.md  benchmark.py  main.py  pyproject.toml  reality_audit.py  requirements.txt
core/: __init__.py
docs/: CONSTRAINT_EVALUATION_INVENTORY.md  EPISTEMOLOGY_MIGRATION.md  PHASE1_FINAL_CLOSURE.md  PHASE2_ARCHITECTURE.md  PHASE2_ENGINEERING_EVALUATOR_DIRECTIVE.md  PHASE2_PACKAGE_ARCHITECTURE.md  domain_generality_report.md  phase_a_remediation_report.md  phase_d_remediation_report.md  phase_e_f_remediation_report.md  verification_integrity_report.md
examples/: engine_generation.py
knowledge/: __init__.py
llm/: __init__.py  env_loader.py  ollama_client.py  structured_output.py
scripts/: add_validation_case.py  audit_external_evidence.py  check_architecture_sync.py  check_m4_candidate.py  promote_m4_model.py  promote_model_maturity.py  research_dashboard.py  run_campaign_a.py  run_campaigns_86_88.py  run_continuity_sweeps.py  run_domain_generality.py  run_formula_validation.py  run_monte_carlo.py  run_phase10_validation.py  run_phase4_validation.py  run_phase6_validation.py  run_phase7_validation.py  run_phase8_validation.py  run_phase95_validation.py  run_phase9_validation.py  run_regression_proof.py  run_sensitivity_analysis.py  run_units_audit.py
tests/: adversarial_fixtures.py  domain_generality_suite.py  test_architecture_sync.py  test_benchmark_expansion.py  test_bridge_physics_engine.py  test_connecting_rod_model.py  test_constraint_evaluation.py  test_constraint_graph_fanout.py  test_continuity_sweeps.py  (+42 more)
(+281 files in other folders)
