[project]
name = "jarvis2"
version = "0.1.0"
description = "JARVIS 2.0 — Engineering Semantic Kernel"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
